fixed code to restore Java 8 compatability